# django-oscar-cch

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test.sh  tox.ini
cch/: __init__.py  admin.py  apps.py  cache.py  calculator.py  exceptions.py  handlers.py  mixins.py  models.py  settings.py
cch/migrations/: 0001_initial.py
docs/: Makefile  api.rst  changes.rst  conf.py  index.rst  install.rst  make.bat  settings.rst  usage.rst
oscarcch/: __init__.py  admin.py  apps.py  cache.py  calculator.py  handlers.py  mixins.py  models.py  order_creator.py  prices.py  settings.py
oscarcch/locale/es/LC_MESSAGES/: django.po
oscarcch/tests/: test_cch.py  test_uat_cache.py
sandbox/: settings.py  urls.py
sandbox/order/: models.py  utils.py
sandbox/order/migrations/: 0001_initial.py  0004_auto_20160325_1012.py  0005_auto_20170502_1553.py  0006_auto_20190927_0921.py  0008_auto_20190301_1035.py  0011_alter_surcharge_options_line_tax_code_and_more.py  0012_line_allocation_cancelled_line_num_allocated.py  0013_set_num_allocated_to_quantity.py  0014_alter_line_num_allocated.py  0015_order_analytics_tracked_orderlinediscount.py
sandbox/tests/: base.py  test_cch.py  test_persist_taxation_details.py  test_taxation_details.py  test_uat_cache.py
sandbox/wsdl/: cch.xml
src/oscarcch/: __init__.py  admin.py  apps.py  calculator.py  exceptions.py  mixins.py  models.py  prices.py  settings.py  types.py
src/oscarcch/locale/es/LC_MESSAGES/: django.po
src/oscarcch/migrations/: 0001_initial.py  0002_shippingtaxation_shippingtaxationdetail.py
src/oscarcch/tests/: base.py  test_cch.py  test_cch_nine_digits_zip.py  test_cch_real.py  test_persist_taxation_details.py  test_taxation_details.py
