[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-oscar-cch"
version = "7.5.2"
description = "Integration between django-oscar and the CCH Sales Tax Office SOAP API."
readme = "README.rst"
license = { text = "ISC" }
dependencies = [
    "Django (>=5.2)",
    "django-oscar (>=4.0,<4.2)",
    "zeep (>=4.3.2,<5)",
    "django-stubs-ext (>=5.2.9,<6)",
    "pybreaker (>=1.4.1,<2)",
]
requires-python = ">=3.12"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-cch"
Repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-cch"

[dependency-groups]
dev = [
    "coverage (==7.13.1)",
    "ruff (>=0.14.13)",
    "freezegun (==1.5.5)",
    "lxml (==6.0.2)",
    "psycopg2-binary (==2.9.11)",
    "sorl-thumbnail (==12.11.0)",
    "sphinx-rtd-theme (==3.1.0)",
    "sphinx (==8.2.3)",
    "tox (==4.34.1)",
    "unittest-xml-reporting (==3.2.0)",
    "requests-mock (==1.12.1)",
    "django-stubs (==5.2.9)",
    "mypy (==1.19.1)",
    "types-psycopg2 (>=2.9.21.20251012,<3)",
    "lxml-stubs (==0.5.1)",
    "tox-uv>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["oscarcch"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true", "uv build"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "oscar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pybreaker"
ignore_missing_imports = true


[tool.django-stubs]
django_settings_module = "sandbox.settings"

[tool.ruff.lint.isort]
from-first = true

[tool.isort]
profile = "black"
from_first = true
